Added elements to capture messages
And added the assertions for each condition.

--- a/com.PSL.PageObject/com.PSL.PageObject.csproj
+++ b/com.PSL.PageObject/com.PSL.PageObject.csproj
@@ -59,7 +59,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppointmentErrorView.cs" />
     <Compile Include="AppointmentSchedulingView.cs" />
+    <Compile Include="AppointmentSuccess.cs" />
     <Compile Include="HomeView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
